# mm

./: .gitignore  CMakeLists.txt  README.md  mm.c  mm.h
include/: mm.h
src/: mm.c
test/: CMakeLists.txt  dummy.c  test_load.c
